# sunil

./: .env.example  .gitignore  README.md  custom_test.txt  main.py  pyproject.toml  requirements.txt
examples/: api_examples.py
src/: __init__.py  api.py  cache.py  html_parser.py  llm_agent.py  main.py  playwright_agent.py  scenario_builder.py
src/output/: .gitkeep  generated.feature
